[tool.poetry]
name = "food-facilities-challenge"
version = "0.1.0"
description = ""
authors = ["Jacob Ginsparg <jacobginsparg@gmail.com>"]
readme = "README.md"
packages = [{ include = "food_facilities_challenge", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
pandas = "^2.0.3"
geopy = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["router_facilities: Related to facilities"]
